configurazione grunt per compilazione sass

--- a/client/scss/app.scss
+++ b/client/scss/app.scss
@@ -1,2 +1,2 @@
-@import '../compenents/bootstrap-sass-official/asserts/stylesheet/bootstrap.scss'
-
+//importazione file sass di bootstrap
+@import '../components/bootstrap-sass-official/assets/stylesheets/bootstrap.scss'
